# polyflame

./: .pre-commit-config.yaml  .readthedocs.yaml  LICENSE  MANIFEST.in  README.md  pyproject.toml
.github/workflows/: tests.yml
docs/: _config.yml  _toc.yml  fhirflat.ipynb  index.md  intro.md  plots.ipynb
docs/_static/: gdh.css
docs/api/: fhirflat.rst  main.rst  plots.rst  types.rst
polyflame/: __init__.py  fhirflat.py  palettes.py  plots.py  types.py  util.py
polyflame/fakedata/: __init__.py  fhirflat.py
polyflame/samples/: __init__.py
polyflame/samples/sample-fhirflat/: condition.parquet  encounter.parquet  fhirflat.toml  patient.parquet
polyflame/taxonomy/: fhirflat-isaric3.toml
tests/: test_fhirflat.py  test_plots.py  test_util.py
tests/data/: sha256sums.txt
